update: read JSON Payment QUEUE